k8s/01-5-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-app-pod
spec:
  containers:
  - name: app-container
    image: custom-app-image:latest
    imagePullPolicy: IfNotPresent
    ports:
    - containerPort: 8080
    volumeMounts:
    - name: logs-volume
      mountPath: /app/logs
  volumes:
  - name: logs-volume
    emptyDir: {}
