k8s/08-destinationrule-log.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: log-service-dr
spec:
  host: log-service
  trafficPolicy:
    loadBalancer:
      simple: LEAST_CONN
    connectionPool:
      tcp:
        maxConnections: 3
      http:
        http1MaxPendingRequests: 5
    tls:
      mode: ISTIO_MUTUAL
